// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering basic rendering using DOM types directly 1`] = `
<div>
  <span>
    first
  </span>
  <span>
    second
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering basic rendering using DOM types directly 2`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering basic rendering using DOM types directly 3`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
  <span>
    Added a fourth item
  </span>
</div>
`;

exports[`rendering basic rendering using functions in compNames map 1`] = `
<div>
  <span>
    first
  </span>
  <span>
    second
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering basic rendering using functions in compNames map 2`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering basic rendering using functions in compNames map 3`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
  <span>
    Added a fourth item
  </span>
</div>
`;

exports[`rendering basic rendering using functions in compNames map wire events to instance 1`] = `
<div>
  <span
    onClick={[Function]}
  >
    first
  </span>
  <span
    onClick={[Function]}
  >
    second
  </span>
  <span
    onClick={[Function]}
  >
    third
  </span>
</div>
`;
